[project]
name = "xxx"
version = "0.1.0"
description = ""
authors = [
    {name = "yazan korjo",email = "yazan.korjo@asyalogic.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
